--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_url_not_found_in_created_job.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_url_not_found_in_created_job.yaml
@@ -1,5 +1,7 @@
 - metadata:
     creationTimestamp: null
+    finalizers:
+    - pullrequestpayloadqualificationruns.ci.openshift.io/dependent-prowjobs
     name: prpqr-test
     namespace: test-namespace
     resourceVersion: "1000"
@@ -29,15 +31,13 @@
   status:
     conditions:
     - lastTransitionTime: "1970-01-01T00:00:00Z"
-      message: Jobs triggered with errors
-      reason: WithErrors
-      status: "False"
+      message: All jobs triggered successfully
+      reason: AllJobsTriggered
+      status: "True"
       type: AllJobsTriggered
     jobs:
     - jobName: periodic-ci-test-org-test-repo-test-branch-test-name
       prowJob: some-uuid
       status:
-        description: 'created job never appeared in cache: timed out waiting for the
-          condition'
         startTime: "1970-01-01T00:00:00Z"
-        state: error
+        state: triggered
