--- a/cmd/prow-job-dispatcher/testdata/TestDispatchDeltaJobs/capabilities/cluster-api-provider-gcp-presubmits.yaml
+++ b/cmd/prow-job-dispatcher/testdata/TestDispatchDeltaJobs/capabilities/cluster-api-provider-gcp-presubmits.yaml
@@ -12,6 +12,7 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
+      capability/intranet: "intranet"
     name: pull-ci-openshift-cluster-api-provider-gcp-master-e2e-gcp
     rerun_command: /test e2e-gcp
     spec:
@@ -101,6 +102,7 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
+      capability/intranet: "intranet"
     name: pull-ci-openshift-cluster-api-provider-gcp-master-e2e-gcp-operator
     rerun_command: /test e2e-gcp-operator
     spec:
