--- a/test/integration/repo-init/expected/ci-operator/jobs/openshift/origin/openshift-origin-main-presubmits.yaml
+++ b/test/integration/repo-init/expected/ci-operator/jobs/openshift/origin/openshift-origin-main-presubmits.yaml
@@ -62,7 +62,7 @@ presubmits:
     branches:
     - ^main$
     - ^main-
-    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
+    cluster: api.ci
     context: ci/prow/unit
     decorate: true
     decoration_config:
