--- a/test/integration/repo-init/expected/ci-operator/config/org/repo/org-repo-main.yaml
+++ b/test/integration/repo-init/expected/ci-operator/config/org/repo/org-repo-main.yaml
@@ -61,6 +61,6 @@ tests:
           cpu: 100m
     workflow: ipi-aws
 zz_generated_metadata:
-  branch: master
+  branch: main
   org: org
   repo: repo
