--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Invalid_ci_operator_configuration_and_fail_to_update_EC.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Invalid_ci_operator_configuration_and_fail_to_update_EC.yaml
@@ -1,4 +1,10 @@
 metadata:
+  annotations:
+    ephemeralcluster.ci.openshift.io/pr-event-headers: '{"X-Github-Delivery": "aa9ede40-8fbb-11f0-8717-9eed0c1315d0"}'
+    ephemeralcluster.ci.openshift.io/pr-event-payload: "\n{\n  \"pull_request\": {\n
+      \   \"base\": {\n\t  \"repo\": {\n\t    \"name\": \"ci-tools\",\n\t    \"owner\":
+      {\n\t\t  \"login\": \"openshift\"\n\t\t}\n\t  },\n\t  \"ref\": \"main\",\n\t
+      \ \"sha\": \"8f5e7d6ec106ccf86684fcff808d85cac960f0a3\"\n\t}\n  }\n}"
   creationTimestamp: null
   name: ec
   namespace: ns
@@ -7,11 +13,5 @@ spec:
   ciOperator:
     test:
       workflow: test-workflow
-  pullRequest:
-    event: "\n{\n  \"pull_request\": {\n    \"base\": {\n\t  \"repo\": {\n\t    \"name\":
-      \"ci-tools\",\n\t    \"owner\": {\n\t\t  \"login\": \"openshift\"\n\t\t}\n\t
-      \ },\n\t  \"ref\": \"main\",\n\t  \"sha\": \"8f5e7d6ec106ccf86684fcff808d85cac960f0a3\"\n\t}\n
-      \ }\n}"
-    headers: '{"X-Github-Delivery": "aa9ede40-8fbb-11f0-8717-9eed0c1315d0"}'
 status:
   phase: ""
